--- a/Admin/index.html
+++ b/Admin/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <link rel="icon" href="/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>投票後台管理</title>
+  <title>後台管理投票</title>
 </head>
 
 <body>
